--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -80,7 +80,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p style="font-family: 'Courier New', Courier, monospace;">Hey it's me Mahesh Basnet from  with 3+ years of web Designing ,
+          <p style="font-family: 'Courier New', Courier, monospace;">Hey it's me Mahesh Basnet from Nepal with 3+ years of web Designing ,
           web development & mobile application development experience.
           Javascript being my core technical skill, I don't limit within it.
           I do more study and research to keep updated with the latest technologies..</p>
