--- a/Todo-List-Project/index.html
+++ b/Todo-List-Project/index.html
@@ -14,9 +14,9 @@
 	<input type="text" placeholder="Add New Todo">
 
 	<ul>
-		<li><span><i class="fa fa-trash"></i></span> Go To Potions Class</li>
-		<li><span><i class="fa fa-trash"></i></span> Buy New Robes</li>
-		<li><span><i class="fa fa-trash"></i></span> Visit Hagrid</li>
+		<li><span><i class="fa fa-trash"></i></span>Write Bugs</li>
+		<li><span><i class="fa fa-trash"></i></span>Take Bath</li>
+		<li><span><i class="fa fa-trash"></i></span> Visit Dharan</li>
 	</ul>
 </div>
 
